fixing menu overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -32,6 +32,7 @@ body {
   font-family: 'Roboto', sans-serif;
   font-style: normal;
   font-size: 1.2rem;
+  overflow-x: hidden;
 }
 
 /* HERO SECTION */
